--- a/source/CUELegendKeys.vcxproj
+++ b/source/CUELegendKeys.vcxproj
@@ -87,10 +87,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <LibraryPath>$(DXSDK_DIR)\Lib\x86;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)\build\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)\build\temp\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <LibraryPath>$(DXSDK_DIR)\Lib\x64;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)\build\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)\build\temp\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -201,6 +205,10 @@ xcopy  /Y /I /S  "$(SolutionDir)Assets\*" "$(OutDir)"</Command>
     <ClCompile Include="HSBar.cpp" />
     <ClCompile Include="HSCastable.cpp" />
     <ClCompile Include="HSChamp.cpp" />
+    <ClCompile Include="HSLBase.cpp" />
+    <ClCompile Include="HSLItems.cpp" />
+    <ClCompile Include="HSLResourceBar.cpp" />
+    <ClCompile Include="HSLSkills.cpp" />
     <ClCompile Include="ImageFilterMat.cpp" />
     <ClCompile Include="FrameProcessing.cpp" />
     <ClCompile Include="LEDController.cpp" />
@@ -232,6 +240,10 @@ xcopy  /Y /I /S  "$(SolutionDir)Assets\*" "$(OutDir)"</Command>
     <ClInclude Include="HSBar.h" />
     <ClInclude Include="HSCastable.h" />
     <ClInclude Include="HSChamp.h" />
+    <ClInclude Include="HSLBase.h" />
+    <ClInclude Include="HSLItems.h" />
+    <ClInclude Include="HSLResourceBar.h" />
+    <ClInclude Include="HSLSkills.h" />
     <ClInclude Include="ImageFilterMat.h" />
     <ClInclude Include="CUELegendKeysResources.h" />
     <ClInclude Include="FrameProcessing.h" />
