Stability Improvements, Fixed Memoryleaks

--- a/source/CUELegendKeys.vcxproj
+++ b/source/CUELegendKeys.vcxproj
@@ -206,9 +206,10 @@ xcopy  /Y /I /S  "$(SolutionDir)Assets\*" "$(OutDir)"</Command>
     <ClCompile Include="HSCastable.cpp" />
     <ClCompile Include="HSChamp.cpp" />
     <ClCompile Include="HSLBase.cpp" />
-    <ClCompile Include="HSLItems.cpp" />
-    <ClCompile Include="HSLResourceBar.cpp" />
-    <ClCompile Include="HSLSkills.cpp" />
+    <ClCompile Include="HSLItem.cpp" />
+    <ClCompile Include="HSLBar.cpp" />
+    <ClCompile Include="HSLSkill.cpp" />
+    <ClCompile Include="HSPassive.cpp" />
     <ClCompile Include="ImageFilterMat.cpp" />
     <ClCompile Include="FrameProcessing.cpp" />
     <ClCompile Include="LEDController.cpp" />
@@ -241,15 +242,16 @@ xcopy  /Y /I /S  "$(SolutionDir)Assets\*" "$(OutDir)"</Command>
     <ClInclude Include="HSCastable.h" />
     <ClInclude Include="HSChamp.h" />
     <ClInclude Include="HSLBase.h" />
-    <ClInclude Include="HSLItems.h" />
-    <ClInclude Include="HSLResourceBar.h" />
-    <ClInclude Include="HSLSkills.h" />
+    <ClInclude Include="HSLItem.h" />
+    <ClInclude Include="HSLBar.h" />
+    <ClInclude Include="HSLSkill.h" />
+    <ClInclude Include="HSPassive.h" />
     <ClInclude Include="ImageFilterMat.h" />
     <ClInclude Include="CUELegendKeysResources.h" />
     <ClInclude Include="FrameProcessing.h" />
     <ClInclude Include="LEDController.h" />
+    <ClInclude Include="libs\SimpleIni.h" />
     <ClInclude Include="Settings.h" />
-    <ClInclude Include="simpleini\SimpleIni.h" />
     <ClInclude Include="UIBase.h" />
     <ClInclude Include="UIMainDialog.h" />
     <ClInclude Include="UIMainWindow.h" />
